# rust-lob-rl-market-maker

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
backend/: main.py  requirements.txt
backend/models/: schemas.py
backend/routers/: evaluation.py  metrics.py  simulation.py
backend/services/: engine.py  sac_agent.py  websocket.py
crates/quantflow-core/: Cargo.toml
crates/quantflow-core/benches/: lob_bench.rs  orderbook_bench.rs
crates/quantflow-core/examples/: as_backtest.rs  as_grid_search.rs  binance_stream_test.rs  hawkes_qq.rs  normalize_btcusdt.rs  record_btcusdt.rs  replay_btcusdt.rs
crates/quantflow-core/src/: lib.rs  lob.rs  sim.rs  simulator.rs  strategy.rs
crates/quantflow-core/src/data/: arrow_export.rs  binance.rs  binance_ws.rs  lobster.rs  market_event.rs  mod.rs  normalizer.rs  recorder.rs  replay.rs
crates/quantflow-core/src/exchange/: binance_rest.rs  binance_ws.rs  config.rs  mod.rs  risk_manager.rs  types.rs
crates/quantflow-core/src/hawkes/: calibration.rs  kernel.rs  mod.rs  process.rs
crates/quantflow-core/src/metrics/: mod.rs  stylized_facts.rs
crates/quantflow-core/src/orderbook/: book.rs  matching.rs  mod.rs  order.rs  types.rs
crates/quantflow-core/src/strategy/: avellaneda.rs
crates/quantflow-core/tests/: binance_tests.rs  exchange_testnet.rs  lobster_replay.rs  recorder_tests.rs  test_risk_manager.rs
crates/quantflow-core/tests/fixtures/: sample_message.csv  sample_orderbook.csv
crates/quantflow-ffi/: Cargo.toml
crates/quantflow-ffi/src/: functions.rs  lib.rs  orderbook.rs  replay.rs  risk_manager.rs  simulator.rs  strategy.rs
dashboard/: package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx
dashboard/src/app/arena/: page.tsx
dashboard/src/app/live/: page.tsx
dashboard/src/app/metrics/: page.tsx
dashboard/src/app/simulator/: page.tsx
dashboard/src/components/charts/: DistributionBox.tsx  PnlChart.tsx  PnlDecomposition.tsx  SharpeBar.tsx
dashboard/src/components/layout/: Header.tsx  Sidebar.tsx
dashboard/src/components/live/: ControlBar.tsx  LobDepthChart.tsx  PriceChart.tsx  StatsPanel.tsx  TimesSales.tsx  TradeFeed.tsx  TradeFlowChart.tsx
dashboard/src/components/terminal/: BloombergTable.tsx  CommandLine.tsx  DataCell.tsx  FunctionKeyBar.tsx  Panel.tsx  StatusBar.tsx  Ticker.tsx  TopBar.tsx
dashboard/src/components/ui/: ConnectionBadge.tsx  StatCard.tsx
dashboard/src/hooks/: useSimulation.ts
dashboard/src/lib/: api.ts  sim-info-store.ts  types.ts
python/quantflow/: __init__.py  features.py  obs_features.py
python/quantflow/calibration/: __init__.py  calibrate.py  classify.py  event_classifier.py  goodness_of_fit.py  hawkes_mle.py  plot_stylized_facts.py  simulate_calibrated.py  stylized_facts.py  validate.py
python/quantflow/dashboard/: app.py
python/quantflow/envs/: __init__.py  curriculum.py  domain_randomizer.py  market_making.py  safety_rules.py
python/quantflow/evaluation/: __init__.py  compare.py  plots.py  report.py
python/quantflow/paper_trading/: __main__.py  config.py  exchange_client.py  lob_tracker.py  obs_builder.py  runner.py
python/quantflow/training/: __init__.py  ab_curriculum.py  ab_domain.py  ab_observation.py  ab_reward.py  callbacks.py  evaluate.py  feature_extractor.py  train.py
scripts/: dev.sh  plot_qq.py  run_evaluation.sh
tests/: test_curriculum.py  test_domain_randomizer.py  test_env.py  test_event_classifier.py  test_features.py  test_ffi.py  test_hawkes_mle.py  test_paper_trading.py  test_reward_v2.py  test_risk_manager_py.py  test_safety_rules.py  test_stylized_facts.py
