[package]
name = "quantflow-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
crossbeam = "0.8"
serde = { version = "1", features = ["derive"] }
bincode = "1"
tracing = "0.1"
arrow = { version = "53", features = ["ffi"] }
parquet = { version = "53", features = ["arrow"] }
thiserror = "1"
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
rayon = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "lob_bench"
harness = false

[[bench]]
name = "orderbook_bench"
harness = false
