[package]
name = "quantflow-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
crossbeam = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
tracing = "0.1"
arrow = { version = "53", features = ["ffi"] }
parquet = { version = "53", features = ["arrow"] }
thiserror = "1"
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
rayon = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
url = "2"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
parquet = { version = "53", features = ["arrow"] }

[[bench]]
name = "lob_bench"
harness = false

[[bench]]
name = "orderbook_bench"
harness = false
